--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
+		<link
+			rel="icon"
+			type="image"
+			sizes="200x200"
+			style="width: 60px"
+			href="/src/images/browserTab Log.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Marvins Ogwuche</title>
 	</head>
